assign a box to shop
